# suma

./: .gitignore  Cargo.toml
bruno/Suma/: bruno.json
bruno/Suma/Account/: Create.bru  Update.bru
bruno/Suma/Transaction/: Create.bru  Delete.bru  Search.bru  Transaction.bru  Update.bru  folder.bru
bruno/Suma/User/: Create.bru  Get.bru  Login.bru  Logout.bru  Password Salt.bru
src/: .main.rs.swp  app_error.rs  auth.rs  http_error.rs  main.rs
src/controllers/: account.rs  transaction.rs  user.rs
src/dto/: account.rs  transaction.rs  user.rs
src/models/: account.rs  transaction.rs  user.rs
src/routes/: .other.rs.swp  account.rs  mod.rs  other.rs  transaction.rs  user.rs
src/views/: .index.js.swp  createHtml.js  index.css  index.html  index.js  package-lock.json  package.json
src/views/css/: addMenu.css  createAllowance.css  editAllowance.css  home.css  index.css  index.css.map  printable.css  transactionDetails.css  viewCategory.css  viewTransactions.css
src/views/js/: Elem.js  EncryptionHandler.js  Format.js  HomeButton.js  Navigator.js  Notifier.js  encryptPassword.js  index.js  index.js.map
src/views/js/data/: Account.js  Allowance.js  Bill.js  Income.js  Transaction.js  User.js
src/views/js/pages/: AddMenu.js  CreateAccount.js  CreateAllowance.js  CreateBill.js  CreateIncome.js  CreateTransaction.js  EditAllowance.js  EditBill.js  EditIncome.js  EditTransaction.js  Home.js  Login.js  Page.js  Printable.js  Register.js  TransactionDetails.js  ViewAllowances.js  ViewBills.js  ViewIncome.js  ViewMenu.js  ViewTransactions.js
