[package]
name = "suma"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-files = "0.6"
tokio = {version = "1", features = ["full"]}
serde = {version = "1", features = ["derive"]}
mongodb = {version = "2.8.0", features = ["tokio-runtime"]}
bson = "2.8.0"
uuid = {version = "1", features = ["v4"]}
regex = "1"
